--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
+    "debug": "^2.6.8",
     "express": "~4.14.1",
+    "express-session": "^1.15.5",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.2"
   }
 }
